package com.exadel.pedrolima.entity.enums;

public enum TicketStatus {

    RESERVED,
    CANCELED,
    CONFIRMED;

}
