package com.exadel.pedrolima.entity.enums;

public enum UserRole {

    ADMIN,
    CUSTOMER;

}
